--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ icon.large {
 				</div>
 				<div class="col-xs-9 col-sm-8">
 					<h1>Reid M. Lynch</h1>
-					<h2>Software Builder &amp; Project Leader</h2>
+					<h2>Developer &amp; Project Leader</h2>
 					<section id="basics">
 						<div class="contact">
 							<div class="website">
@@ -505,7 +505,7 @@ icon.large {
 							</div>
 							<div class="email">
 								<icon class="entypo-mail"></icon>
-								<a href="/cdn-cgi/l/email-protection#99ebfcf0fdb7f5e0f7faf1d9fef4f8f0f5b7faf6f4"><span class="__cf_email__" data-cfemail="0c7e696568226075626f644c6b616d6560226f6361">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
+								<a href="/cdn-cgi/l/email-protection#cdbfa8a4a9e3a1b4a3aea58daaa0aca4a1e3aea2a0"><span class="__cf_email__" data-cfemail="186a7d717c367461767b70587f75797174367b7775">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></a>
 							</div>
 							<div class="phone">
@@ -528,6 +528,13 @@ icon.large {
 							</div>
 						</section>
 					</section>
+				</div>
+			</div>
+			<div id="summary" class="row">
+				<div class="col-sm-8 col-sm-offset-4 col-xs-12">
+					<div class="summary">
+						<p class="lead">I&#x27;m passionate about taking innvoative ideas and building them from the ground up. With an eye for understanding business needs and organizing their execution, I excel in managing all aspects of applications from the server bare metal to the pixel on the screen.</p>
+					</div>
 				</div>
 			</div>
 	<section id="work" class="row">
