--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ icon.large {
 							</div>
 							<div class="email">
 								<icon class="entypo-mail"></icon>
-								<a href="/cdn-cgi/l/email-protection#cdbfa8a4a9e3a1b4a3aea58daaa0aca4a1e3aea2a0"><span class="__cf_email__" data-cfemail="186a7d717c367461767b70587f75797174367b7775">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
+								<a href="/cdn-cgi/l/email-protection#a2d0c7cbc68ccedbccc1cae2c5cfc3cbce8cc1cdcf"><span class="__cf_email__" data-cfemail="e496818d80ca889d8a878ca48389858d88ca878b89">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></a>
 							</div>
 							<div class="phone">
@@ -558,10 +558,10 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2014-04-22
+						April 2014
 					</span>
 					<span class="endDate">
-						- 2015-03-25
+						to March 2015
 					</span>
 				</div>
 				<div class="website">
@@ -577,10 +577,10 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2013-02-01
+						February 2013
 					</span>
 					<span class="endDate">
-						- 2014-04-18
+						to April 2014
 					</span>
 				</div>
 				<div class="website">
@@ -596,10 +596,10 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2012-02-01
+						February 2012
 					</span>
 					<span class="endDate">
-						- 2013-10-01
+						to October 2013
 					</span>
 				</div>
 				<div class="website">
@@ -615,10 +615,10 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2012-06-01
+						June 2012
 					</span>
 					<span class="endDate">
-						- 2012-12-01
+						to December 2012
 					</span>
 				</div>
 				<div class="website">
@@ -634,10 +634,10 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2011-02-01
+						February 2011
 					</span>
 					<span class="endDate">
-						- 2011-11-01
+						to November 2011
 					</span>
 				</div>
 			</div>
@@ -650,10 +650,10 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2010-02-01
+						February 2010
 					</span>
 					<span class="endDate">
-						- 2010-09-01
+						to September 2010
 					</span>
 				</div>
 				<div class="website">
@@ -669,10 +669,10 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2007-11-01
+						November 2007
 					</span>
 					<span class="endDate">
-						- 2010-01-01
+						to January 2010
 					</span>
 				</div>
 				<div class="website">
@@ -705,10 +705,10 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2003-09-01
+						September 2003
 					</span>
 					<span class="endDate">
-						- 2007-06-01
+						to June 2007
 					</span>
 				</div>
 			</div>
