--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ icon.large {
 							</div>
 							<div class="email">
 								<icon class="entypo-mail"></icon>
-								<a href="/cdn-cgi/l/email-protection#a2d0c7cbc68ccedbccc1cae2c5cfc3cbce8cc1cdcf"><span class="__cf_email__" data-cfemail="e496818d80ca889d8a878ca48389858d88ca878b89">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
+								<a href="/cdn-cgi/l/email-protection#84f6e1ede0aae8fdeae7ecc4e3e9e5ede8aae7ebe9"><span class="__cf_email__" data-cfemail="7507101c115b190c1b161d351218141c195b161a18">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></a>
 							</div>
 							<div class="phone">
@@ -776,6 +776,14 @@ icon.large {
 					<li>Amazon Web Services</li>
 					<li>Heroku</li>
 					<li>Continuous Integration</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="name">APIs</h3>
+				<ul class="keywords">
+					<li>AdWords</li>
+					<li>Stripe</li>
+					<li>AWS</li>
 				</ul>
 			</div>
 		</div>
