update after leaving position

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ h4 span:first-child {
 			<h3>About</h3>
 		</aside>
 		<div class="col-sm-9">
-			<p>I&#x27;m passionate about taking innovative ideas and building them from the ground up. With an eye for understanding business needs and organizing their execution, I excel in managing all aspects of applications from the server bare metal to the pixel on the screen.</p>
+			<p>I&#x27;m passionate about taking innovative ideas and building them from the ground up. With an eye for understanding business needs and organizing their execution, I excel in managing both the human &amp; technical elements of software development.</p>
 		</div>
 	</section>
 	<section id="profiles" class="row">
@@ -280,7 +280,7 @@ h4 span:first-child {
 				<h4 class="strike-through">
 					<span>Verblio</span>
 					<span class="date">
-						May 2015 — present
+						May 2015 — Sep 2021
 					</span>
 				</h4>
 				<div class="website pull-right">
@@ -292,6 +292,11 @@ h4 span:first-child {
 				<div class="summary">
 					<p></p>
 				</div>
+				<ul class="highlights">
+					<li class="bullet">Led development of Verblio&#x27;s software platform connecting businesses with writers to produce and edit original articles.</li>
+					<li class="bullet">Built and managed a highly effective hybrid US/overseas team of software professionals.</li>
+					<li class="bullet">Performed key role in planning &amp; architecting product enhancements in our company roadmap.</li>
+				</ul>
 			</div>
 			<div class="col-sm-12">
 				<h4 class="strike-through">
