update linkedin link

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ h4 span:first-child {
 					</strong>
 					<div class="username">
 						<div class="url">
-							<a href="https://www.linkedin.com/in/reid-lynch-4475334/">Reid Lynch</a>
+							<a href="https://www.linkedin.com/in/reid-lynch/">Reid Lynch</a>
 						</div>
 					</div>
 				</div>
